# crypto-currency-sdk

./: Cargo.toml  LICENSE
src/: hex_array.rs  lib.rs  utils.rs
src/xrp/: address.rs  base58_array.rs  entropy.rs  mod.rs  network_type.rs  private_key.rs  public_address.rs  public_key.rs  seed_ed25519.rs  xrp_key_set.rs  xrp_wallet.rs
