[package]
name = "crypto-currency-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
k256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }

rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "hex",
] }


ripple-address-codec = "*"
ring = "*"
base-x = "*"
ripemd = "*"
